depends_compile_tests/tests/fail/derive/value/path_attrs.rs
use depends::derives::Value;

#[derive(Value)]
#[depends(is::unhashable)]
struct Foo {
    bar: Vec<usize>,
}

fn main() {}
