depends_compile_tests/tests/fail/derive/value/path_attrs.stderr
error: Unexpected attribute ""is""
 --> tests/fail/derive/value/path_attrs.rs:4:11
  |
4 | #[depends(is::unhashable)]
  |           ^^
